Complete portfolio page BS mobile view

--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
 			</main>
 
 			<!-- || Block - Footer responsive cols lead -->
-			<footer class="bg-white position-relative z-n1 footer-resp-cols-lead">
+			<footer class="bg-white position-relative z-n1 footer-resp-cols-lead footer-rcl-anim">
 				<div class="container">
 					<h2 class="visually-hidden">Footer</h2>
 					<!-- || Component - Banner lg text stroke -->
