--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -140,26 +140,245 @@
         <article>
 
           <!-- || Block - Hero trans banner anim -->
-          <div class="pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim hero-tba-team">
-            <div class="container hero-tba-content-ctr">
+          <div class="hero-trans-banner-anim hero-tba-portfolio">
+            <div class="container">
               <div class="row justify-content-center gy-4 gy-lg-5">
                 <div class="col-12">
                   <div class="mb-3"><span
                       class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">OUR WORKS</span>
                   </div>
                   <h2
-                    class="display-2 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                    class="display-1 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
                     data-animation="animate__fadeInUp">Portfolio</h2>
                 </div>
               </div>
             </div>
           </div>
 
+          <section class="portfolio-metro-anim-filter">
+            <div class="container">
+              <div>
+                <h3 class="visually-hidden">List of portfolios</h3>
+              </div>
+              <div class="row row-cols-2 justify-content-center align-items-center pf-maf-filter-row">
+                <div class="col-auto pf-maf-filter-tittle-col">
+                  <h4 class="mb-0 opacity-50 cfs-13 cfs-sm-14 fw-medium">Filter By:</h4>
+                </div>
+
+                <div class="col-auto">
+                  <div class="btn-group" role="group" aria-label="Filter options">
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="all" autocomplete="off" checked
+                      value="*">
+                    <label
+                      class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
+                      for="all">All</label>
+
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="branding" autocomplete="off"
+                      value=".pf-maf-filter-brand">
+                    <label
+                      class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
+                      for="branding">Branding</label>
+
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="mobileApp" autocomplete="off"
+                      value=".pf-maf-filter-app">
+                    <label
+                      class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
+                      for="mobileApp">Mobile App</label>
+
+                    <input type="radio" class="btn-check pf-maf-radio" name="filter" id="creative" autocomplete="off"
+                      value=".pf-maf-filter-web">
+                    <label
+                      class="btn btn-outline-primary cursor-hs-scale mx-sm-2 border-0 bg-transparent opacity-50 cfs-13 cfs-sm-14 fw-medium pf-maf-label"
+                      for="creative">Creative</label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row row-cols-1 row-cols-md-2 g-4 pf-maf-portfolio-ctr">
+                <div class="col-lg-3 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-lg pf-maf-filter-web">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/1.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-sm pf-maf-filter-app">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/10.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-lg pf-maf-filter-brand">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/3.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-sm pf-maf-filter-web">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/4.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-lg pf-maf-filter-brand">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/6.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-sm pf-maf-filter-app">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/5.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-sm pf-maf-filter-web">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/7.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 overflow-hidden pf-maf-portfolio-wr pf-maf-portfolio-wr-sm pf-maf-filter-brand">
+                  <div class="h-100 position-relative anim-swipe-in-lr-zb anim-gsap"
+                    data-animation="anim-si-lr-zb-animate">
+                    <div class="w-100 h-100 position-absolute z-n1">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/portfolio/8.jpg">
+                    </div>
+
+                    <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
+                      <div class="overflow-hidden py-4 w-100">
+                        <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                          href="./project-details.html">
+                          <div class="overflow-hidden">
+                            <span class="d-inline-block pf-maf-cnt-link-text">Design
+                              Art</span>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </section>
         </article>
       </main>
 
       <!-- || Block - Footer responsive cols lead -->
-      <footer class="position-relative z-n1 footer-resp-cols-lead">
+      <footer class="bg-white position-relative z-n1 footer-resp-cols-lead">
         <div class="container">
           <h2 class="visually-hidden">Footer</h2>
 
@@ -203,8 +422,8 @@
               <h3 class="h6 cfs-xl-20 mb-3">Newsletter</h3>
               <form class="row border-bottom form-ns-minimal g-0">
                 <div class="col">
-                  <input type="email" class="form-control border-0 w-100 cfs-14 px-0 py-2 shadow-none" id="email"
-                    placeholder="Type Your Email">
+                  <input type="email" class="bg-white form-control border-0 w-100 cfs-14 px-0 py-2 shadow-none"
+                    id="email" placeholder="Type Your Email">
                 </div>
                 <button type="submit" class="col-auto btn"><i
                     class="fa-solid fa-arrow-right cursor-hs-scale"></i></button>
@@ -252,6 +471,7 @@
 
   <!-- Font awesome kit -->
   <script src="https://kit.fontawesome.com/efb6dbae73.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script type="module" src="../scripts/main.js"></script>
 </body>
 
