--- a/pages/team.html
+++ b/pages/team.html
@@ -665,7 +665,7 @@
       </main>
 
       <!-- || Block - Footer responsive cols lead -->
-      <footer class="position-relative z-n1 footer-resp-cols-lead">
+      <footer class="position-relative z-n1 footer-resp-cols-lead footer-rcl-anim">
         <div class="container">
           <h2 class="visually-hidden">Footer</h2>
 
