--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -148,7 +148,7 @@
                       class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">OUR WORKS</span>
                   </div>
                   <h2
-                    class="display-1 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                    class="display-1 col-lg-10 col-xl-8 fw-semibold lh-base ls-wide animate__animated animate__delay-2s anim-gsap hero-tba-pf-tittle"
                     data-animation="animate__fadeInUp">Portfolio</h2>
                 </div>
               </div>
