Fix validation error of search button and a link tag in project details page

--- a/pages/project-details.html
+++ b/pages/project-details.html
@@ -18,7 +18,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Google fonts ends -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- local style import -->
   <link rel="stylesheet" href="../styles/style.css">
@@ -52,7 +52,7 @@
     <nav class="navbar navbar-expand-lg bg-body navbar-responsive-menu-center">
       <div class="container-lg navbar-rmc-container">
         <a href="../" class="navbar-brand cursor-hs-scale navbar-rmc-brand cursor-hs-scale">
-          <h1 class="visually-hidden">Kindled</h1>
+          <!-- <h1 class="visually-hidden">Kindled</h1> -->
           <img src="../images/logo-dark.png" alt="Kindled" class="navbar-rmc-brand-img">
         </a>
 
@@ -105,13 +105,13 @@
           <!-- || Component - Form search anim -->
           <div class="form-search-anim" role="search">
             <button class="d-block h-100 bg-body p-0 cursor-hs-scale form-sa-control overflow-hidden" type="button">
-              <div class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
+              <span class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
                 <span class="material-icons d-block cfs-18 text-secondary active">search</span>
-              </div>
-              <div
+              </span>
+              <span
                 class="bg-secondary-subtle d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-close">
                 <span class="material-icons d-block cfs-18 text-secondary">close</span>
-              </div>
+              </span>
             </button>
 
             <form class="d-flex form-sa-form z-3 p-2" role="search">
@@ -138,7 +138,23 @@
 
         <!-- || Article -->
         <article>
-          <div style="height: 100vh;"></div>
+          <div>
+            <div class="container">
+              <div class="row g-5">
+                <div class="col-lg-6">
+                  <h1>Something</h1>
+                </div>
+
+                <div class="col-sm-6 col-lg-3">
+
+                </div>
+
+                <div class="col-sm-6 col-lg-3">
+
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
