--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,7 +18,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Google fonts ends -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- local style import -->
   <link rel="stylesheet" href="../styles/style.css">
@@ -105,13 +105,13 @@
           <!-- || Component - Form search anim -->
           <div class="form-search-anim" role="search">
             <button class="d-block h-100 bg-body p-0 cursor-hs-scale form-sa-control overflow-hidden" type="button">
-              <div class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
+              <span class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
                 <span class="material-icons d-block cfs-18 text-secondary active">search</span>
-              </div>
-              <div
+              </span>
+              <span
                 class="bg-secondary-subtle d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-close">
                 <span class="material-icons d-block cfs-18 text-secondary">close</span>
-              </div>
+              </span>
             </button>
 
             <form class="d-flex form-sa-form z-3 p-2" role="search">
