Complete project details page BS mobile view

--- a/pages/project-details.html
+++ b/pages/project-details.html
@@ -138,31 +138,155 @@
 
         <!-- || Article -->
         <article>
-          <div>
-            <div class="container">
-              <div class="row g-5">
+          <div class="hero-trans-banner-anim hero-tba-project-dtls">
+            <div class="container mb-5">
+              <div class="row g-5 justify-content-between align-items-center">
                 <div class="col-lg-6">
-                  <h1>Something</h1>
+                  <h1 class="display-4 fw-semibold">Luxury Glassware.</h1>
                 </div>
 
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-lg-6">
+                  <dl class="row row-cols-1 row-cols-sm-2 justify-content-between gy-4">
+                    <div class="col">
+                      <dt class="fw-medium mb-2">Category</dt>
+                      <dd class="cfs-14 fw-light ls-normal">DIGITAL DESIGN</dd>
+                    </div>
 
-                </div>
+                    <div class="col">
+                      <dt class="fw-medium mb-2">Customer</dt>
+                      <dd class="cfs-14 fw-light ls-normal">UI-THEMEZ</dd>
+                    </div>
 
-                <div class="col-sm-6 col-lg-3">
+                    <div class="col">
+                      <dt class="fw-medium mb-2">Date</dt>
+                      <dd class="cfs-14 fw-light ls-normal">AUGUST 6, 2020</dd>
+                    </div>
 
+                    <div class="col">
+                      <dt class="fw-medium mb-2">Location</dt>
+                      <dd class="cfs-14 fw-light ls-normal">MELBOURNE, AUSTRALIA</dd>
+                    </div>
+                  </dl>
                 </div>
               </div>
             </div>
+
+            <div class="container-fluid px-0 hero-tba-pd-display-ctr">
+              <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-1.jpg"
+                alt="A model opening the project designed in green wear and background">
+            </div>
           </div>
+
+          <!-- || Block - project-details-img-parallax (Project details with images and pararllax animation) -->
+          <section class="project-details-img-parallax">
+            <div class="container">
+              <div class="row gx-lg-5 mb-5">
+                <div class="col-lg-5">
+                  <h2 class="h1 fw-semibold lh-base">We create everything digital, printable and analytical.</h2>
+                </div>
+
+                <div class="col-lg-7">
+                  <p class="text-secondary lh-md mb-4">Won’t seasons, appear days them stars replenish divided. All
+                    second
+                    forth. Him place was seas man
+                    and gathering creepeth called fly. Them sea place lights, midst bearing fourth above.</p>
+
+                  <ul class="row row-cols-1 row-cols-md-2 mb-0">
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Brand Development</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Art Direction</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Marketing Strategy</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Mobile App Design</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Content Management</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">System & Guides</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Graphic Design</li>
+                    <li class="col text-secondary cfs-14 mb-2 lh-lg">Brand Development</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="row row-cols-1 gy-5 mb-5">
+                <div class="col">
+                  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+                    <div class="col">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-2.jpg"
+                        alt="Black sling bag designed as branding wearing by a model">
+                    </div>
+
+                    <div class="col">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-3.jpg"
+                        alt="File designed as part of branding holding by a model with a green background">
+                    </div>
+
+                    <div class="col">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-4.jpg"
+                        alt="Shoe design shows by a model in a blue background">
+                    </div>
+
+                  </div>
+                </div>
+
+                <div class="col">
+                  <!-- || Component - anim-parallax-bottom-top (Animation parallax bottom top) -->
+                  <div class="overflow-hidden position-relative anim-parallax-bottom-top">
+                    <img class="position-absolute start-0 bottom-0 w-100 object-fit-cover anim-pbt-content"
+                      src="../images/projects/project-detail-5.jpg"
+                      alt="Apple personal computer cover design revealed by a model on top of a green table with a green background">
+                  </div>
+                </div>
+              </div>
+
+              <p class="text-center cfs-18 mb-4">Working collaboratively with brands and agencies worldwide.
+                Designing
+                and developing
+                websites and applications with a focus on interaction, motion and visual experience.</p>
+
+              <div class="row align-items-center gx-lg-5 py-5">
+                <div class="col-lg-5 mb-5">
+                  <div class="h-100">
+                    <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-3.jpg"
+                      alt="File designed as part of branding holding by a model with a green background">
+                  </div>
+                </div>
+
+                <div class="col-lg-7">
+                  <p class="cfs-18 fw-light mb-4">Working collaboratively with brands and agencies worldwide. Designing
+                    and
+                    developing websites and
+                    applications with a focus on interaction, motion and visual experience.</p>
+
+                  <ul class="list-group">
+                    <li class="list-group-item border-0 d-flex align-items-center column-gap-2 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-md fw-medium cfs-18">Amazing communication.</span>
+                    </li>
+
+                    <li class="list-group-item border-0 d-flex align-items-center column-gap-2 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-md fw-medium cfs-18">Best trendinf designing experience.</span>
+                    </li>
+
+                    <li class="list-group-item border-0 d-flex align-items-center column-gap-2 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-md fw-medium cfs-18">Email & Live chat.</span>
+                    </li>
+
+                    <li class="list-group-item border-0 d-flex align-items-center column-gap-2 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-md fw-medium cfs-18">Amazing communication.</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
             <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
               <div class="overflow-hidden position-absolute start-0 end-0 top-0 z-n1 lead-pbg-sp-parallax">
                 <img class="position-relative w-100 object-fit-cover lead-pbg-sp-parallax-img"
-                  src="../images/company/fancy-living-room.jpg"
-                  alt="Fancy living room where a small cabin set up as office">
+                  src="../images/projects/project-detail-6.jpg"
+                  alt="Personal computer displayed with a black background">
               </div>
             </div>
 
@@ -170,8 +294,8 @@
               <div class="row gy-4 align-items-center">
                 <div class="col-lg-8 anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate"
                   data-js-opacity-zero>
-                  <h3 class="display-5 fw-semibold text-uppercase">NEXT PROJECT</h3>
-                  <p class="display-5 fw-semibold">Luxury Glassware</p>
+                  <h3 class="cfs-14 fw-light text-uppercase ls-wide">NEXT PROJECT</h3>
+                  <p class="display-5 fw-semibold">Sinzere The Mission.</p>
                 </div>
 
                 <div class="col-lg-4">
