Complete project details page BS all view and testing

--- a/pages/about.html
+++ b/pages/about.html
@@ -1050,7 +1050,7 @@
 
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
-            <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
+            <div class="container position-relative lead-pbg-sp-parallax-ctr">
               <div class="overflow-hidden position-absolute start-0 end-0 top-0 z-n1 lead-pbg-sp-parallax">
                 <img class="position-relative w-100 object-fit-cover lead-pbg-sp-parallax-img"
                   src="../images/company/fancy-living-room.jpg"
@@ -1059,7 +1059,7 @@
             </div>
 
             <div class="position-relative z-1 container lead-pbg-sp-cnt-ctr">
-              <div class="row gy-4 align-items-center">
+              <div class="row gy-4 align-items-center justify-content-between">
                 <div class="col-lg-8 anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate"
                   data-js-opacity-zero>
                   <h3 class="display-5 fw-semibold">Have a project in mind?</h3>
