--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -205,7 +205,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -227,7 +227,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -249,7 +249,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -271,7 +271,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -293,7 +293,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -315,7 +315,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -337,7 +337,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
@@ -359,7 +359,7 @@
                     <div class="w-100 h-100 d-flex align-items-center pf-maf-cnt-wr">
                       <div class="overflow-hidden py-4 w-100">
                         <h4 class="text-center text-white animate__animated pf-maf-cnt-tittle">Character Design</h4>
-                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none animate__animated"
+                        <a class="d-block text-center text-white text-uppercase ls-normal stretched-link text-decoration-none cursor-hs-scale"
                           href="./project-details.html">
                           <div class="overflow-hidden">
                             <span class="d-inline-block pf-maf-cnt-link-text">Design
