--- a/pages/contact.html
+++ b/pages/contact.html
@@ -220,7 +220,7 @@
 
                     <div class="col-12">
                       <button type="submit"
-                        class="btn btn-secondary cfs-14 shadow-none mb-3 bg-transparent text-primary rounded-pill py-2 lh-lg form-brd-phl-px-normal form-brd-phl-btn-hover">Let's
+                        class="btn btn-secondary cfs-14 shadow-none mb-3 bg-transparent text-primary rounded-pill py-2 lh-lg form-brd-phl-px-normal form-brd-phl-btn-hover cursor-hs-scale">Let's
                         Talk</button>
                     </div>
                   </form>
