--- a/pages/project-details.html
+++ b/pages/project-details.html
@@ -138,11 +138,14 @@
 
         <!-- || Article -->
         <article>
+
+          <!-- || Block - Hero trans banner anim -->
           <div class="hero-trans-banner-anim hero-tba-project-dtls">
-            <div class="container mb-5">
+            <div class="container mb-5 pb-lg-3">
               <div class="row g-5 justify-content-between align-items-center">
                 <div class="col-lg-6">
-                  <h1 class="display-4 fw-semibold">Luxury Glassware.</h1>
+                  <h1 class="display-4 fw-semibold hero-tba-pd-tittle animate__animated animate__delay-2s anim-gsap"
+                    data-animation="animate__fadeInUp">Luxury Glassware.</h1>
                 </div>
 
                 <div class="col-lg-6">
@@ -180,13 +183,16 @@
           <!-- || Block - project-details-img-parallax (Project details with images and pararllax animation) -->
           <section class="project-details-img-parallax">
             <div class="container">
-              <div class="row gx-lg-5 mb-5">
+              <div class="row gx-lg-5 gy-2 mb-5 pb-lg-3 justify-content-around">
                 <div class="col-lg-5">
-                  <h2 class="h1 fw-semibold lh-base">We create everything digital, printable and analytical.</h2>
+                  <h2 class="h1 fw-semibold lh-base anim-forward-flip-in-x anim-gsap"
+                    data-animation="anim-ff-in-x-animate" data-js-opacity-zero>We
+                    create everything digital, printable and analytical.</h2>
                 </div>
 
-                <div class="col-lg-7">
-                  <p class="text-secondary lh-md mb-4">Won’t seasons, appear days them stars replenish divided. All
+                <div class="col-lg-7 col-xxl-6">
+                  <p class="text-secondary lh-md mb-4 mb-md-5">Won’t seasons, appear days them stars replenish divided.
+                    All
                     second
                     forth. Him place was seas man
                     and gathering creepeth called fly. Them sea place lights, midst bearing fourth above.</p>
@@ -206,7 +212,7 @@
 
               <div class="row row-cols-1 gy-5 mb-5">
                 <div class="col">
-                  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+                  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5 g-md-4 g-xxl-5">
                     <div class="col">
                       <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-2.jpg"
                         alt="Black sling bag designed as branding wearing by a model">
@@ -235,21 +241,26 @@
                 </div>
               </div>
 
-              <p class="text-center cfs-18 mb-4">Working collaboratively with brands and agencies worldwide.
+              <p class="text-center cfs-18 cfs-lg-24 mb-4 mx-lg-auto col-lg-10 col-xl-9 col-xxl-8 py-lg-4">Working
+                collaboratively
+                with
+                brands and agencies
+                worldwide.
                 Designing
                 and developing
                 websites and applications with a focus on interaction, motion and visual experience.</p>
 
-              <div class="row align-items-center gx-lg-5 py-5">
-                <div class="col-lg-5 mb-5">
+              <div class="row align-items-center gy-5 gx-lg-5 gx-xl-0 py-5 justify-content-between">
+                <div class="col-lg-5 col-xxl-4">
                   <div class="h-100">
                     <img class="w-100 h-100 object-fit-cover" src="../images/projects/project-detail-3.jpg"
                       alt="File designed as part of branding holding by a model with a green background">
                   </div>
                 </div>
 
-                <div class="col-lg-7">
-                  <p class="cfs-18 fw-light mb-4">Working collaboratively with brands and agencies worldwide. Designing
+                <div class="col-lg-7 col-xl-6 col-xxl-7">
+                  <p class="cfs-18 cfs-xxl-24 fw-light mb-4">Working collaboratively with brands and agencies worldwide.
+                    Designing
                     and
                     developing websites and
                     applications with a focus on interaction, motion and visual experience.</p>
@@ -282,7 +293,7 @@
 
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
-            <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
+            <div class="container position-relative lead-pbg-sp-parallax-ctr">
               <div class="overflow-hidden position-absolute start-0 end-0 top-0 z-n1 lead-pbg-sp-parallax">
                 <img class="position-relative w-100 object-fit-cover lead-pbg-sp-parallax-img"
                   src="../images/projects/project-detail-6.jpg"
@@ -291,10 +302,10 @@
             </div>
 
             <div class="position-relative z-1 container lead-pbg-sp-cnt-ctr">
-              <div class="row gy-4 align-items-center">
+              <div class="row gy-4 align-items-center justify-content-between">
                 <div class="col-lg-8 anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate"
                   data-js-opacity-zero>
-                  <h3 class="cfs-14 fw-light text-uppercase ls-wide">NEXT PROJECT</h3>
+                  <h3 class="cfs-14 fw-light text-uppercase ls-wide mb-3">NEXT PROJECT</h3>
                   <p class="display-5 fw-semibold">Sinzere The Mission.</p>
                 </div>
 
